salesforce-migration/force-app/main/default/objects/Bouquet_Scheduling_Job__c/Bouquet_Scheduling_Job__c.object-meta.xml
<CustomObject>
    <label>Bouquet Scheduling Job</label>
    <pluralLabel>Bouquet Scheduling Jobs</pluralLabel>
    <nameField>
        <displayFormat>JOB-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>