salesforce-migration/force-app/main/default/objects/Bouquet_Scheduling_Job__c/fields/Locked_By__c.field-meta.xml
<CustomField>
    <fullName>Locked_By__c</fullName>
    <label>Locked By</label>
    <type>Text</type>
    <length>255</length>
</CustomField>