salesforce-migration/force-app/main/default/objects/Bouquet_Scheduling_Job__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <label>Max Attempts</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>3</defaultValue>
</CustomField>