salesforce-migration/force-app/main/default/objects/Bouquet_Scheduling_Job__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
    <defaultValue>2</defaultValue>
</CustomField>