salesforce-migration/force-app/main/default/objects/Bouquet_Scheduling_Job__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>PENDING</fullName><default>true</default></value>
            <value><fullName>PROCESSING</fullName><default>false</default></value>
            <value><fullName>COMPLETED</fullName><default>false</default></value>
            <value><fullName>FAILED</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>